# trae-no-proxy

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python.yml
docs/: protocol-matrix.md
examples/: check-trae-cn.ps1  patch-trae-cn.ps1  run-relay.ps1
scripts/: build-exe.ps1
src/trae_custom_endpoint_patch/: cli.py  patcher.py  relay.py
tests/: test_project.py
tools/: trae_newapi_tap.py
